--- a/_SITE COFRUTA/css/style.css
+++ b/_SITE COFRUTA/css/style.css
@@ -1,5 +1,5 @@
 /* GERAL */
-/*  #ffff00 - ORIGINAL | #ffff00 - nova*/
+/*  ##18d26e - ORIGINAL | #ffff00 - nova*/
 
 body {
   background: #fff;
@@ -8,14 +8,14 @@ body {
 }
 
 a {
-  color: #ffff00;
+  color: ##ffff00;
   transition: 0.5s;
 }
 
 a:hover,
 a:active,
 a:focus {
-  color: #ffff00;
+  color: ##ffff00;
   outline: none;
   text-decoration: none;
 }
@@ -42,7 +42,7 @@ h6 {
 .back-to-top {
   position: fixed;
   display: none;
-  background:  #ffff00;
+  background:  #18d26e;
   color: #fff;
   width: 44px;
   height: 44px;
@@ -61,7 +61,7 @@ h6 {
   color: #fff;
 }
 
-/* PRELOADER */
+/* PRELOADER -------------------*/
 
 #preloader {
   position: fixed;
@@ -112,7 +112,7 @@ h6 {
   }
 }
 
-/* CABEÇALHO */
+/* CABEÇALHO -------------------------------*/
 #header {
   padding: 30px 0;
   height: 92px;
@@ -157,7 +157,7 @@ h6 {
   margin: 0;
 }
 
-/* INTRO */
+/* INTRO -----------------*/
 
 #intro {
   display: table;
@@ -288,17 +288,17 @@ h6 {
   transition: 0.5s;
   margin: 10px;
   color: #fff;
-  background:  #ffff00;
+  background:  #18d26e;
 }
 
 #intro .btn-get-started:hover {
   background: #fff;
-  color:  #ffff00;
+  color:  #18d26e;
 }
 
-/* #MENU DE NAVEGAÇÃO */
+/* #MENU DE NAVEGAÇÃO ---------------*/
 
-/* NAV MENU ESSENTIALS */
+/* NAV MENU ESSENTIALS -----------------*/
 .nav-menu,
 .nav-menu * {
   margin: 0;
@@ -356,13 +356,13 @@ h6 {
   content: "\f105";
 }
 
-/* CONTAINER NAV MENU */
+/* CONTAINER NAV MENU -----------------*/
 #nav-menu-container {
   float: right;
   margin: 0;
 }
 
-/* ESTILO NAV MENU */
+/* ESTILO NAV MENU -------------------*/
 .nav-menu a {
   padding: 0 8px 10px 8px;
   text-decoration: none;
@@ -412,7 +412,7 @@ h6 {
   margin: 0;
 }
 
-/* MOBILE NAV TOGGLE */
+/* MOBILE NAV TOGGLE ---------------*/
 
 #mobile-nav-toggle {
   position: fixed;
@@ -433,7 +433,7 @@ h6 {
   color: #fff;
 }
 
-/* ESTILO MOBILE NAV */
+/* ESTILO MOBILE NAV ------------------*/
 
 #mobile-nav {
   position: fixed;
@@ -517,7 +517,7 @@ h6 {
   display: none;
 }
 
-/* NAV BODY CLASSES MOBILE */
+/* NAV BODY CLASSES MOBILE ----------------*/
 body.mobile-nav-active {
   overflow: hidden;
 }
@@ -531,7 +531,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 
-/* CABEÇALHO */
+/* CABEÇALHO -----------------------------*/
 .section-header h3 {
   font-size: 32px;
   color: #111;
@@ -573,19 +573,21 @@ body.mobile-nav-active #mobile-nav-toggle {
   font-style: italic;
 }
 
-/* SEÇÃO COM BACKGROUND */
+/* SEÇÃO COM BACKGROUND ------------------*/
 
 /* .section-bg {
   background: #f7f7f7;
 } */
 
 
-/* HISTÓRICO */
+/* HISTÓRICO ---------------------*/
 #historico {
-  /* background: url("../img/sobre-bg.jpg") center top no-repeat fixed; */
-  /* background-size: cover; */
+  /* mudei a foto do histórico */
+  /*background: url("../img/IMG_6331.jpg") center top no-repeat fixed; */
+  opacity:1;
+  background-size: cover;
   padding: 60px 0 40px 0;
-  /* position: relative; */
+  position: relative;
 }
 
 #historico .container p{
@@ -599,7 +601,7 @@ body.mobile-nav-active #mobile-nav-toggle {
   
 }
 
-/* PRODUTOS */
+/* PRODUTOS -------------------*/
 
 #produtos {
   background: #fff;
@@ -644,7 +646,7 @@ body.mobile-nav-active #mobile-nav-toggle {
   margin-bottom: 0;
 }
 
-/* CALL TO ACTION */
+/* CALL TO ACTION ---------------*/
 
 #call-to-action {
   background: linear-gradient(rgba(0, 142, 99, 0.1), rgba(0, 0, 0, 0.1)), url(../img/call-to-action-bg.jpg) fixed center center;
@@ -818,10 +820,10 @@ body.mobile-nav-active #mobile-nav-toggle {
   text-transform: uppercase;
 }
 
-/* CLIENTES */
+/* CLIENTES -------------------------*/
 
 #clientes {
-  padding: 0 0;
+  padding: 60px 0;
 }
 
 #clientes img {
@@ -855,7 +857,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 
-/* CONTATO */
+/* CONTATO ------------------------*/
 #contato {
   padding: 0 0;
 }
@@ -869,7 +871,7 @@ body.mobile-nav-active #mobile-nav-toggle {
   font-size: 48px;
   display: inline-block;
   margin-bottom: 10px;
-  color:  #ffff00;
+  color:  #18d26e;  /* muda cor dos icones de contato ..amarelo ffff00.. */
 }
 
 #contato .contato-info address,
@@ -959,7 +961,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 
-/* RODAPÉ */
+/* RODAPÉ -------------------------*/
 #footer {
   background: #000;
   padding: 0 0 30px 0;
